--- a/src/components/global.css
+++ b/src/components/global.css
@@ -17,3 +17,12 @@ red {
 text-center {
     text-align: center;
 }
+
+.new::after {
+    content: 'NEW!';
+    color: rgb(0, 0, 128);
+    font-size: 12px;
+    margin-left: 5px;
+    position: relative;
+    top: -15px;
+}
