Added tags for everything and updated label

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -19,7 +19,7 @@ text-center {
 }
 
 .new::after {
-    content: 'NEW!';
+    content: "New, for my Darling Blue";
     color: rgb(0, 0, 128);
     font-size: 12px;
     margin-left: 5px;
