--- a/src/components/global.css
+++ b/src/components/global.css
@@ -14,6 +14,18 @@ red {
     color: red;
 }
 
+navy {
+    color: rgb(0, 0, 128);
+}
+
+olive {
+    color: #708238;
+}
+
+yellow {
+    color: #f4d400;
+}
+
 text-center {
     text-align: center;
 }
